; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_nct6775.c_nct6791_enable_io_mapping.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_nct6775.c_nct6791_enable_io_mapping.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NCT6791_REG_HM_IO_SPACE_LOCK_ENABLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [52 x i8] c"Enabling hardware monitor logical device mappings.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @nct6791_enable_io_mapping to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nct6791_enable_io_mapping(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @NCT6791_REG_HM_IO_SPACE_LOCK_ENABLE, align 4
  %6 = call i32 @superio_inb(i32 %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = and i32 %7, 16
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %17

10:                                               ; preds = %1
  %11 = call i32 @pr_info(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str, i64 0, i64 0))
  %12 = load i32, i32* %2, align 4
  %13 = load i32, i32* @NCT6791_REG_HM_IO_SPACE_LOCK_ENABLE, align 4
  %14 = load i32, i32* %3, align 4
  %15 = and i32 %14, -17
  %16 = call i32 @superio_outb(i32 %12, i32 %13, i32 %15)
  br label %17

17:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @superio_inb(i32, i32) #1

declare dso_local i32 @pr_info(i8*) #1

declare dso_local i32 @superio_outb(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
